Added functionality to add user and user creation ui, need to add deactivation and removal

--- a/www/routes/views/dashboard.pug
+++ b/www/routes/views/dashboard.pug
@@ -36,11 +36,9 @@ html
                                     li
                                         a.dropdown-item(href="/admin/api-keys" style="cursor: pointer;") API Keys
                                     li
-                                        a.dropdown-item(href="#" style="cursor: pointer;") Link
-                                    li
                                         hr.dropdown-divider
                                     li
-                                        a.dropdown-item(href="#" style="cursor: pointer;") Link
+                                    a.dropdown-item(href="/admin/users" style="cursor: pointer;") Users
                         li.nav-item
                             a.nav-link.text-danger.active(href="/login/logout") Log Out
 
