--- a/www/routes/views/new_category.pug
+++ b/www/routes/views/new_category.pug
@@ -33,13 +33,11 @@ html
                                 li
                                     a.dropdown-item(href="/admin/create-category" style="cursor: pointer;") Create Category
                                 li
-                                    a.dropdown-item(href="#" style="cursor: pointer;") Link
-                                li
-                                    a.dropdown-item(href="#" style="cursor: pointer;") Link
+                                    a.dropdown-item(href="/admin/api-keys" style="cursor: pointer;") API Keys
                                 li
                                     hr.dropdown-divider
                                 li
-                                    a.dropdown-item(href="#" style="cursor: pointer;") Link
+                                    a.dropdown-item(href="/admin/users" style="cursor: pointer;") Users
                         li.nav-item
                             a.nav-link.text-danger.active(href="/login/logout") Log Out
 
