Starting UI polishing for admin views

--- a/www/public/css/styles.css
+++ b/www/public/css/styles.css
@@ -2,9 +2,8 @@
 
 body {
     overflow-x: hidden !important;
-    background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
 }
 
 .__login_container {
