--- a/www/routes/views/dashboard.pug
+++ b/www/routes/views/dashboard.pug
@@ -30,7 +30,7 @@ html
                                 a.nav-link.dropdown-toggle(href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false") Admin
                                 ul.dropdown-menu
                                     li
-                                        a.dropdown-item(href="/admin/schema" style="cursor: pointer;") Schema
+                                        a.dropdown-item(href="/admin/categories" style="cursor: pointer;") Categories
                                     li
                                         a.dropdown-item(href="/admin/create-category" style="cursor: pointer;") Create Category
                                     li
