--- a/www/routes/views/api_keys.pug
+++ b/www/routes/views/api_keys.pug
@@ -29,7 +29,7 @@ html
                             a.nav-link.dropdown-toggle.active(href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false") Admin
                             ul.dropdown-menu
                                 li
-                                    a.dropdown-item.active(href="/admin/schema" aria-current="page" style="cursor: pointer;") Schema
+                                    a.dropdown-item.active(href="/admin/categories" aria-current="page" style="cursor: pointer;") Categories
                                 li
                                     a.dropdown-item(href="/admin/create-category" style="cursor: pointer;") Create Category
                                 li
@@ -44,15 +44,15 @@ html
         div.row.g-0.justify-content-center
 
             //- Content Container
-            div.container.col-md-8.col-10
+            div.container.col-md-8.col-10.__admin_content
                 div.mt-5
-                    div.__schema_header_container
-                    div.card.__schema_header
+                    div.__admin_header_container
+                    div.__admin_header
                         h1.text-center.mt-2 API Keys
                         p#counter
                         p.w-100.text-center.text-muted Create API keys to access your CMS
                         p.w-100.text-center.text-muted You can click the key to copy to clipboard
-                    div.card.__schema_heading
+                    div.__admin_heading
                         div.row.justify-content-center.g-0
                             form.col-10#NewCategoryForm(action="/admin/api-keys" method="POST")
                                 div.mb-5
@@ -62,7 +62,7 @@ html
                                 div.row.justify-content-center 
                                     button.btn.btn-success.__category_submit_button(style="width: auto; height: auto;" type="submit") Add API Key
                                 
-                            .row.g-0.col-10.justify-content-center
+                            .row.g-0.col-10.justify-content-center#APIKeyList
                                 table.table#APIKeyTable
                                     thead 
                                         th Current API Keys
@@ -84,7 +84,6 @@ html
                 let table = document.getElementById("APIKeyTable")
                 let key = document.getElementById(id)
                 await navigator.clipboard.writeText(key.innerHTML)
-                alert("Key Copied")
             }
 
                     
