--- a/www/routes/views/api_keys.pug
+++ b/www/routes/views/api_keys.pug
@@ -1,6 +1,6 @@
 html
     head 
-        title=title + " | Schema"
+        title=title + " | API Keys"
         link(rel="icon", href=image_url)
         link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css")
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js") 
@@ -51,7 +51,6 @@ html
                         h1.text-center.mt-2 API Keys
                         p#counter
                         p.w-100.text-center.text-muted Create API keys to access your CMS
-                        p.w-100.text-center.text-muted You can click the key to copy to clipboard
                     div.__admin_heading
                         div.row.justify-content-center.g-0
                             form.col-10#NewCategoryForm(action="/admin/api-keys" method="POST")
@@ -62,28 +61,104 @@ html
                                 div.row.justify-content-center 
                                     button.btn.btn-success.__category_submit_button(style="width: auto; height: auto;" type="submit") Add API Key
                                 
-                            .row.g-0.col-10.justify-content-center#APIKeyList
-                                table.table#APIKeyTable
-                                    thead 
-                                        th Current API Keys
-                                    tbody 
-                                        if api_keys.length == 0
-                                            td You do not have any API keys set up yet.
-                                        else 
-                                            each key in api_keys 
-                                                tr
-                                                    td 
-                                                        a(href="/admin/delete-api-key?name="+key.name)
-                                                            img(src="/images/icons/trash.png" height="20" width="20" style="display: inline;")
-                                                        p(style="display: inline;") #{key.name}
-                                                    td(id=key.name style="cursor: pointer;" onclick=`createCopy("${key.name}")`) #{key.key}
-                            
+                            .row.g-0.col-10.justify-content-center
+                                div.__api_key_list_container
+                                    each key in api_keys 
+                                        div.__api_key_list_item 
+                                            div.__api_key_list_item_buttons
+                                                button.__icon.__delete_icon(type="button" data-bs-toggle="modal" data-bs-target="#ModalDeleteFor"+key.key)
+                                                    img(src="/images/icons/trash.png" height="20" width="20" style="display: inline;")
+                                                button.__icon.__settings_icon(type="button" data-bs-toggle="modal" data-bs-target="#ModalForCategoriesFor"+key.key)
+                                                    img(src="/images/icons/settings.png" height="20" width="20" style="display: inline;")
+                                                button.__icon.__info_icon(type="button" data-bs-toggle="modal" data-bs-target="#ModalFor"+key.key)
+                                                    img(src="/images/icons/info.png" height="20" width="20" style="display: inline;")
+                                                button.__icon.__copy_icon(type="button" onclick=`createCopy("${key.key}")`)
+                                                    img(src="/images/icons/copy.png" height="20" width="20" style="display: inline;")
+                                            h4.__api_key_list_name(data-bs-toggle="modal" data-bs-target="#ModalFor"+key.key) #{key.name}
+                                            p.__invisible_key(id=key.key) #{key.key}
+
+                                        div.modal(id="ModalDeleteFor"+key.key tabindex="-1")
+                                            div.modal-dialog 
+                                                div.modal-content 
+                                                    div.modal-header 
+                                                        h5.modal-title Delete #{key.name}?
+                                                        button.btn-close(type="button" data-bs-dismiss="modal" aria-label="Close")
+                                                    div.modal-body
+                                                        p Are you sure you want to delete the api key for #{key.name}?
+                                                        p You will no longer be able to use the key to access your content.
+                                                        a.btn.btn-danger.__modal_delete_button(href="/admin/delete-api-key?key="+key.key) Delete
+                                                        button.btn.btn-success(type="button" data-bs-dismiss="modal") Cancel
+                                                    
+                                        div.modal(id="ModalFor"+key.key)
+                                            div.modal-dialog 
+                                                div.modal-content 
+                                                    div.modal-header
+                                                        h4.modal-title API Key Info
+                                                        button.btn-close(type="button" data-bs-dismiss="modal" aria-label="Close")
+                                                    div.modal-body 
+                                                        p API Key Name: #{key.name}
+                                                        p API Key: #{key.key}
+                                                        p Categories: #{key.categories}
+                                                        p Created on: #{key.createdAt}
+                                                        button.btn.btn-danger.__modal_delete_button(type="button" data-bs-toggle="modal" data-bs-target="#ModalDeleteFor"+key.key) Delete
+                                        
+                                        div.modal(id="ModalForCategoriesFor"+key.key)
+                                            div.modal-dialog 
+                                                div.modal-content 
+                                                    div.modal-header
+                                                        h4.modal-title API Key Info
+                                                        button.btn-close(type="button" data-bs-dismiss="modal" aria-label="Close")
+                                                    div.modal-body 
+                                                        h5 Key: #{key.name}
+                                                        p Set categories for access
+                                                        form(id="CategoryFormFor"+key.key action="/admin/api-key-categories?key="+key.key method="POST")
+                                                            if categories.length != 0
+                                                                for category in categories 
+                                                                    script.
+                                                                        var category = "#{category.name}"
+                                                                        var key = "#{key.key}"
+                                                                        var current_categories = "#{key.categories}"
+                                                                        var form = document.getElementById("CategoryFormFor"+key);
+                                                                        if(current_categories.includes(category)) {
+                                                                            var checkedCheckbox = document.createElement('input');
+                                                                            checkedCheckbox.type = "checkbox";
+                                                                            checkedCheckbox.classList.add("form-check-input");
+                                                                            checkedCheckbox.id = category;
+                                                                            checkedCheckbox.name = category;
+                                                                            checkedCheckbox.checked = true;
+                                                                            var label = document.createElement('label');
+                                                                            label.classList.add("form-check-label");
+                                                                            label.for = category;
+                                                                            label.innerHTML = category;
+                                                                            var linebreak = document.createElement("br");
+                                                                            form.appendChild(checkedCheckbox);
+                                                                            form.appendChild(label);
+                                                                            form.appendChild(linebreak);
+                                                                        } else {
+                                                                            var checkedCheckbox = document.createElement('input');
+                                                                            checkedCheckbox.type = "checkbox";
+                                                                            checkedCheckbox.classList.add("form-check-input");
+                                                                            checkedCheckbox.id = category;
+                                                                            checkedCheckbox.name = category;
+                                                                            checkedCheckbox.checked = false;
+                                                                            var label = document.createElement('label');
+                                                                            label.classList.add("form-check-label");
+                                                                            label.for = category;
+                                                                            label.innerHTML = category;
+                                                                            var linebreak = document.createElement("br");
+                                                                            form.appendChild(checkedCheckbox);
+                                                                            form.appendChild(label);
+                                                                            form.appendChild(linebreak);
+                                                                        }
+                                                            else
+                                                                p No Categories Set
+                                                            
+                                                            button.btn.btn-success(type="submit") Modify
+                                                    
+
 
         script.
             async function createCopy(id) {
-                let table = document.getElementById("APIKeyTable")
                 let key = document.getElementById(id)
-                await navigator.clipboard.writeText(key.innerHTML)
-            }
-
-                    
+                await navigator.clipboard.writeText(key.textContent)
+            }                    
